Trying to fix navbar spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 #title {
-  /* margin-left: 5vw; */
+  width: 80%;
   font-family: "Poppins", sans-serif;
 }
 
@@ -9,6 +9,15 @@ a {
   text-decoration: none;
   color: white;
 }
+#toolbar {
+  padding: 0px 0px 0px 0px;
+}
+
+#nav-btn {
+  padding: 0px 0px 0px 0px !important;
+  /* width: 50%; */
+}
+
 .App {
   font-family: Poppins;
   padding: 0;
